--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,10 +1,10 @@
 <form accept-charset="UTF-8" method="post", action='/users/' >
   <label for="username">Username</label>
-  <input id="username" type="text" name="username">
+  <input id="username" type="text" name="user[username]">
   <label for="password">Password</label>
-  <input id="password" type="password" name="password">
+  <input id="password" type="password" name="user[password]">
   <label for="email">Email</label>
-  <input id="email" type="email" name="email">
+  <input id="email" type="email" name="user[email]">
   <input type="submit" name="submit">
   <input type="hidden" name="authenticity_token" value ="<%= form_authenticity_token %>">
 </form>
