--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,17 +1,1 @@
-<%= form_with model: @user do |form| %>
-  <div>
-    <%= form.label :username, title: 'Your username here:' %>
-    <%= form.text_field :username, value: 'johncena' %>
-  </div>
-  <div>
-    <%= form.label :password %>
-    <%= form.password_field :password %>
-  </div>
-  <div>
-    <%= form.label :email %>
-    <%= form.email_field :email, placeholder: 'example@example.com' %>
-  </div>
-  <div>
-    <%= form.submit %>
-  </div>
-<% end %>
+<%= render 'form', user: @user %>
